v0.6/guides/caching/cache.mdx
---
title: "Cache"
description: "Cache values with local or Redis drivers using the @bejibun/cache facade."
icon: "bolt"
---

`@bejibun/cache` is a driver-based caching library with a small, expressive
API. It supports two backends: **local** (file-based) and **Redis**.

## Installation

```bash
bun ace install @bejibun/cache
```

This installs the package and adds `config/cache.ts`.

## Configuration

```ts config/cache.ts
import App from "@bejibun/app";
import CacheDriverEnum from "@bejibun/cache/enums/CacheDriverEnum";

const config: Record<string, any> = {
    default: "local",

    connections: {
        local: {
            driver: CacheDriverEnum.Local,
            path: App.Path.storagePath("cache") // absolute path
        },

        redis: {
            driver: CacheDriverEnum.Redis,
            host: env("REDIS_HOST"),
            port: env("REDIS_PORT"),
            password: env("REDIS_PASSWORD"),
            database: env("REDIS_DATABASE")
        }
    }
};

export default config;
```

| Field             | Purpose                                             |
| ----------------- | --------------------------------------------------- |
| `default`         | Connection name used when none is passed explicitly |
| `connections.*.driver` | Either `CacheDriverEnum.Local` or `CacheDriverEnum.Redis` |
| `connections.local.path` | Absolute directory for local cache files (`storage/cache`) |
| `connections.redis.*`    | `host`, `port`, `password`, and `database` of the Redis server |

| Driver  | Backing store                                              |
| ------- | ---------------------------------------------------------- |
| `Local` | Files under the configured `path` (default `storage/cache`) |
| `Redis` | A Redis server (see [Redis](/v0.6/guides/caching/redis))   |

Cache keys are namespaced automatically, so a key like `user:1` never collides
with raw Redis keys. The Redis driver connects through
[`@bejibun/redis`](/v0.6/guides/caching/redis), which `@bejibun/cache` brings in
as a dependency, and reads the `host`, `port`, `password`, and `database` fields
above when it connects.

## Usage

```ts
import Cache from "@bejibun/cache";

// fetch from cache or compute and store
const user = await Cache.remember(
    "user:1",                                   // key
    async () => await UserModel.findOrFail(1),  // callback
    300                                         // ttl (seconds)
);

await Cache.put("hits", 0);                     // store with optional TTL
await Cache.increment("hits");                  // bump a counter
const value = await Cache.get("hits");
await Cache.forget("hits");                     // delete
```

## API reference

| Method                           | Description                                       |
| -------------------------------- | ------------------------------------------------- |
| `remember(key, callback, ttl?)`  | Return the cached value, or compute and store it  |
| `get(key)`                       | Retrieve a value (`null`/empty when missing)      |
| `has(key)`                       | Whether the key exists                            |
| `add(key, value, ttl?)`          | Store only if absent; returns whether stored      |
| `put(key, value, ttl?)`          | Store or overwrite; returns whether stored        |
| `forget(key)`                    | Delete a key                                      |
| `increment(key, ttl?)`           | Increment a counter by 1                          |
| `decrement(key, ttl?)`           | Decrement a counter by 1                          |
| `incrementBy(key, n, ttl?)`      | Increment a counter by `n`                        |
| `decrementBy(key, n, ttl?)`      | Decrement a counter by `n`                        |
| `connection(name)`               | Use a non-default connection                       |

```ts
await Cache.connection("local").put("tmp", "value", 60);
```

<Note>
    TTL values are in **seconds**. `increment`/`decrement` (and their `By`
    variants) set a starting value when the key does not yet exist, so
    `decrement` on a fresh key yields `-1`.
</Note>